# zero2prod

./: Cargo.toml  Readme.md  compose.yml
migrations/: 20220727160205_create_subscriptions_table.sql
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: tests.rs
